# OS_xonar_driver

./: CMakeLists.txt  README.md
cli/: Makefile  cli.c
cmake/: FindKernelHeaders.cmake
sound/pci/xonar/: Makefile  main.c  main.h  makefile  oxygen.h  oxygen.haha  oxygen_io.c  oxygen_regs.h  pcm.c  simple_mixer.c  xonar_hardware.c  xonar_lib.c
